--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Default ignored files
 __pycache__/
 /shelf/
-/workspace.xml
+/.idea/workspace.xml
 # Editor-based HTTP Client requests
 /httpRequests/
 # Datasource local storage ignored files
